--- a/application-cloud.yml
+++ b/application-cloud.yml
@@ -15,10 +15,9 @@ management:
   metrics:
     export:
       wavefront:
-        uri: ${vcap.services.wavefront.credentials.uri}
-        api-token: ${vcap.services.wavefront.credentials.api-token}
+        uri: proxy://http://wavefront-proxy.service.internal:4443
 
 wavefront:
+  freemium-account: false
   application:
-    name: spring-petclinic
-  freemium-account: ${vcap.services.wavefront.credentials.fremium}
+    name: spring-petclinic-cloud
