--- a/application.yml
+++ b/application.yml
@@ -61,12 +61,14 @@ spring.cloud.kubernetes.discovery.enabled: false
 
 ---
 spring:
-  profiles: mysql
-  datasource:
-    schema: classpath*:db/mysql/schema.sql
-    data: classpath*:db/mysql/data.sql
-    url: jdbc:mysql://localhost:3306/service_instance_db?useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName&zipkinServiceName=localDockerDb
-    platform: mysql
-    username: root
-    password: petclinic
-    initialization-mode: ALWAYS
+  config:
+    activate:
+      on-profile: mysql
+    datasource:
+      schema: classpath*:db/mysql/schema.sql
+      data: classpath*:db/mysql/data.sql
+      url: jdbc:mysql://localhost:3306/service_instance_db?useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName&zipkinServiceName=localDockerDb
+      platform: mysql
+      username: root
+      password: petclinic
+      initialization-mode: ALWAYS
