--- a/customers-service.yml
+++ b/customers-service.yml
@@ -7,9 +7,11 @@ eureka:
 
 ---
 spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
+  config:
+    activate:
+      on-profile:  docker
+      zipkin:
+        baseUrl: http://tracing-server:9411
 server:
   port: 8081
 eureka:
