--- a/tracing-server.yml
+++ b/tracing-server.yml
@@ -3,7 +3,9 @@ server:
 
 ---
 spring:
-  profiles: default
+  config:
+    activate:
+      on-profile: default
 eureka:
   instance:
     # enable to register multiple app instances with a random server port
@@ -11,7 +13,9 @@ eureka:
 
 ---
 spring:
-  profiles: docker
+  config:
+    activate:
+      on-profile: docker
 eureka:
   client:
     serviceUrl:
