--- a/visits-service.yml
+++ b/visits-service.yml
@@ -1,5 +1,7 @@
-﻿spring:
-  profiles: default
+spring:
+  config:
+    activate:
+      on-profile: default
 eureka:
   instance:
     # enable to register multiple app instances with a random server port
@@ -7,9 +9,11 @@ eureka:
 
 ---
 spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
+  config:
+    activate:
+      on-profile: docker
+      zipkin:
+      baseUrl: http://tracing-server:9411
 server:
   port: 8082
 eureka:
