--- a/customers-service.yml
+++ b/customers-service.yml
@@ -1,5 +1,7 @@
-﻿spring:
-  profiles: default
+spring:
+  config:
+    activate:
+      on-profile: default
 eureka:
   instance:
     # enable to register multiple app instances with a random server port
@@ -9,7 +11,7 @@ eureka:
 spring:
   config:
     activate:
-      on-profile:  docker
+      on-profile: docker
       zipkin:
         baseUrl: http://tracing-server:9411
 server:
